syntax = "proto3";
option go_package="proto.bank.branch";

service BankBranchService {
  rpc Create(CreateBankBranchRequest) returns (BankBranchProfileResponse);
  rpc Read(SingleBankBranchRequest) returns (BankBranchProfileResponse);
  rpc Update(UpdateBankBranchRequest) returns (SuccessResponse);
  rpc Delete(SingleBankBranchRequest) returns (SuccessResponse);
}

message CreateBankBranchRequest{
  int64 code = 1;
  string name = 2;
  int64 bank_id = 3;
  int64 region_id = 4;
  int64 district_id = 5;
  string address = 6;
  string open_date = 7;
  string close_date = 8;
  string crud_dates = 9;
}

message SingleBankBranchRequest{
  int64 id = 1;
}

message BankBranchProfileResponse{
  int64 id = 1;
  string name = 2;
  int64 code = 3;
  int64 bank_id = 4;
  int64 region_id = 5;
  int64 district_id = 6;
  string address = 7;
  string open_date = 8;
  string close_date = 9;
  string crud_dates = 10;
}

message SuccessResponse{
  string response = 1;
}

message UpdateBankBranchRequest {
  int64 id = 1;
  string name = 2;
  int64 code = 3;
  int64 bank_id = 4;
  int64 region_id = 5;
  int64 district_id = 6;
  string address = 7;
  string open_date = 8;
  string close_date = 9;
  string crud_dates = 10;
}